--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,10 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="text_default">#595959</color>
+    <color name="text_secondary">#808080</color>
+    <color name="red">#f5585c</color>
+    <color name="blue_link">#0645AD</color>
+    <color name="grey">#bfbfbf</color>
+    <color name="red_alert">#bfbfbf</color>
 </resources>
