--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -45,12 +45,35 @@
 
             app:layout_constraintVertical_bias=".9"
             app:layout_constraintHorizontal_bias=".3"
+            android:visibility="gone"
 
             android:paddingLeft="20dp"
             android:paddingTop="10dp"
             android:paddingBottom="10dp"
 
             android:hint="@string/username"/>
+
+
+        <EditText
+            android:id="@+id/email_loginform"
+
+            android:layout_width="0dp"
+            app:layout_constraintWidth_percent=".8"
+            android:layout_height="wrap_content"
+
+            app:layout_constraintBottom_toTopOf="@+id/password_loginform"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+
+            app:layout_constraintVertical_bias=".9"
+            app:layout_constraintHorizontal_bias=".3"
+
+            android:paddingLeft="20dp"
+            android:paddingTop="10dp"
+            android:paddingBottom="10dp"
+
+            android:hint="@string/email"/>
 
         <EditText
             android:id="@+id/password_loginform"
