--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -48,12 +48,19 @@
         </Button>
 
         <Button
-            android:id="@+id/button_menu_loguout"
-            android:layout_width="wrap_content"
+            android:id="@+id/button_menu_logout"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="logout"
-            tools:layout_editor_absoluteX="152dp"
-            tools:layout_editor_absoluteY="469dp" />
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/button_menu_modificaaccount"
+            app:layout_constraintWidth_percent="0.8"
+            android:text="logout (user)">
+
+        </Button>
+
+
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
