--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -6,6 +6,12 @@
     android:layout_height="match_parent"
     tools:context=".login.Fragment_Login">
 
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:fillViewport="true"
+        >
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
@@ -156,5 +162,6 @@
             />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
+    </ScrollView>
 
 </FrameLayout>
