--- a/app/src/main/res/layout-land/activity_splash.xml
+++ b/app/src/main/res/layout-land/activity_splash.xml
@@ -18,9 +18,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
-            android:layout_marginBottom="15dp"
+            android:layout_marginBottom="@dimen/activity_vertical_margin_top"
             android:layout_above="@id/splash_imageview"
-            android:text="@string/app_name">
+            android:text="@string/app_name"
+            android:textSize="@dimen/text_size_extra_large">
         </TextView>
 
         <TextView
@@ -29,15 +30,15 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="@dimen/activity_vertical_margin_top"
             android:layout_below="@id/splash_imageview"
             android:text="@string/slogan">
         </TextView>
 
         <ImageView
             android:id="@+id/splash_imageview"
-            android:layout_width="200dp"
-            android:layout_height="200dp"
+            android:layout_width="@dimen/splash_image_size"
+            android:layout_height="@dimen/splash_image_size"
             android:layout_centerInParent="true"
             android:layout_gravity="center"
             android:src="@mipmap/logo_launcher" />
