--- a/app/src/main/res/drawable/button_primary_background.xml
+++ b/app/src/main/res/drawable/button_primary_background.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:state_pressed="true"
-        android:drawable="@color/black"/>
+        android:drawable="@color/red_light"/>
     <!-- pressed -->
     <item android:state_focused="true"
-        android:drawable="@color/black"/>
+        android:drawable="@color/grey"/>
     <!-- focused -->
     <item android:drawable="@color/black"/>
     <!-- default -->
