--- a/app/src/main/res/drawable-v24/button_secondary_shape.xml
+++ b/app/src/main/res/drawable-v24/button_secondary_shape.xml
@@ -3,7 +3,7 @@
 
     <corners android:radius="20dp"/>
 
-    <solid android:color="@color/grey"/>
+    <!--<solid android:color="@color/grey"/>-->
 
 
 </shape>
