--- a/app/src/main/res/drawable/button_primary_shape_pressed.xml
+++ b/app/src/main/res/drawable/button_primary_shape_pressed.xml
@@ -2,8 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
 
     <corners android:radius="20dp"/>
-
-    <solid android:color="@color/red"/>
+    <solid android:color="@color/red_light"/>
 
 
 </shape>
