--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -115,29 +115,31 @@
             app:layout_constraintHorizontal_bias=".8"
             />
 
-        <androidx.appcompat.widget.AppCompatButton
-            style="@style/button_primary"
+        <com.google.android.material.button.MaterialButton
+            style="@style/main_button_style"
+            app:cornerRadius="@dimen/button_radius"
+
+
             android:id="@+id/login_confirm"
 
             android:layout_width="0dp"
-            app:layout_constraintWidth_percent=".8"
-
             android:layout_height="wrap_content"
 
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/password_loginform"
-
-            app:layout_constraintVertical_bias=".3"
-            app:layout_constraintHorizontal_bias=".5"
-
             android:text="@string/login"
-            android:background="@drawable/button_primary_shape"
+
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/password_loginform"
+            app:layout_constraintVertical_bias="0.3"
+            app:layout_constraintWidth_percent=".8"
+
             />
 
         <androidx.appcompat.widget.AppCompatButton
             style="@style/button_secondary"
+
+
             android:id="@+id/button_cancel_loginform"
 
             android:layout_width="0dp"
@@ -159,7 +161,7 @@
 
 
 
-            />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     </ScrollView>
