--- a/app/src/main/res/values-normal/dimens.xml
+++ b/app/src/main/res/values-normal/dimens.xml
@@ -12,13 +12,14 @@
     -->
     <dimen name="inner_frame_layout_padding">5dp</dimen>
 
+    <!-- Activity -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="activity_vertical_margin_top">2dp</dimen>
     <dimen name="nav_header_vertical_spacing">8dp</dimen>
     <dimen name="nav_header_height">180dp</dimen>
 
-
+    <!-- Text -->
     <dimen name="text_size_micro">10sp</dimen>
     <dimen name="text_size_mini">12sp</dimen>
     <dimen name="text_size_small">14sp</dimen>
@@ -36,6 +37,9 @@
     <!-- Personali-->
     <dimen name="splash_image_size">250dp</dimen>
 
+
+    <!-- Button -->
+    <dimen name="button_radius">20dp</dimen>
 
 
 </resources>
