--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -44,6 +44,7 @@
     <!-- Personali-->
     <dimen name="splash_image_size">250dp</dimen>
 
-
+    <!-- Button -->
+    <dimen name="button_radius">20dp</dimen>
 
 </resources>
