--- a/app/src/main/res/values-normal/dimens.xml
+++ b/app/src/main/res/values-normal/dimens.xml
@@ -36,10 +36,21 @@
 
     <!-- Personali-->
     <dimen name="splash_image_size">250dp</dimen>
+    <dimen name="splash_image_size_land">230dp</dimen>
 
 
     <!-- Button -->
     <dimen name="button_radius">20dp</dimen>
+
+    <!-- Margin -->
+    <dimen name="margin_bottom_logo">70dp</dimen>
+    <dimen name="margin_bottom_logo_land">2dp</dimen>
+    <dimen name="margin_top_slogan">50dp</dimen>
+    <dimen name="margin_top_slogan_land">2dp</dimen>
+
+    <!-- round logo -->
+    <dimen name="round_logo_width_external">100dp</dimen>
+    <dimen name="round_logo_width_internal">80dp</dimen>
 
 
 </resources>
