--- a/app/src/main/res/layout-land/activity_first_access.xml
+++ b/app/src/main/res/layout-land/activity_first_access.xml
@@ -7,9 +7,6 @@
     tools:context=".login.Activity_First_Access"
     >
 
-
-
-
     <View
         android:id="@+id/view"
         android:layout_width="wrap_content"
@@ -28,8 +25,8 @@
     </View>
 
     <androidx.cardview.widget.CardView
-        android:layout_width="100dp"
-        android:layout_height="100dp"
+        android:layout_width="@dimen/round_logo_width_external"
+        android:layout_height="@dimen/round_logo_width_external"
         app:cardCornerRadius="250dp"
         app:cardBackgroundColor="@color/white"
         app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
@@ -41,14 +38,14 @@
         >
 
         <androidx.cardview.widget.CardView
-            android:layout_width="80dp"
-            android:layout_height="80dp"
+            android:layout_width="@dimen/round_logo_width_internal"
+            android:layout_height="@dimen/round_logo_width_internal"
             app:cardCornerRadius="250dp"
             android:layout_gravity="center">
 
             <ImageView
-                android:layout_width="80dp"
-                android:layout_height="80dp"
+                android:layout_width="@dimen/round_logo_width_internal"
+                android:layout_height="@dimen/round_logo_width_internal"
                 android:src="@mipmap/logo_launcher"
                 android:scaleType="centerCrop"/>
 
@@ -81,12 +78,10 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintTop_toTopOf="parent"
 
-            app:layout_constraintHeight_percent=".8"
+            app:layout_constraintHeight_percent=".9"
 
-            app:layout_constraintVertical_bias=".2"
-            app:layout_constraintHorizontal_bias=".5"
-            >
-        </fragment>
+            app:layout_constraintVertical_bias=".3"
+            app:layout_constraintHorizontal_bias=".5" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
