--- a/app/src/main/res/layout-land/activity_splash.xml
+++ b/app/src/main/res/layout-land/activity_splash.xml
@@ -18,7 +18,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
-            android:layout_marginBottom="@dimen/activity_vertical_margin_top"
+            android:layout_marginBottom="@dimen/margin_bottom_logo_land"
             android:layout_above="@id/splash_imageview"
             android:text="@string/app_name"
             >
@@ -30,15 +30,15 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="@dimen/activity_vertical_margin_top"
+            android:layout_marginTop="@dimen/margin_top_slogan_land"
             android:layout_below="@id/splash_imageview"
             android:text="@string/slogan">
         </TextView>
 
         <ImageView
             android:id="@+id/splash_imageview"
-            android:layout_width="@dimen/splash_image_size"
-            android:layout_height="@dimen/splash_image_size"
+            android:layout_width="@dimen/splash_image_size_land"
+            android:layout_height="@dimen/splash_image_size_land"
             android:layout_centerInParent="true"
             android:layout_gravity="center"
             android:src="@mipmap/logo_launcher" />
