--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -23,6 +23,7 @@
     <dimen name="cardview_elevation">4dp</dimen>
     <dimen name="cardview_corner_radius">8dp</dimen>
 
+    <!-- Text -->
     <dimen name="text_size_micro">10sp</dimen>
     <dimen name="text_size_mini">12sp</dimen>
     <dimen name="text_size_small">14sp</dimen>
@@ -30,21 +31,25 @@
     <dimen name="text_size_medium_large">20sp</dimen>
     <dimen name="text_size_large">22sp</dimen>
     <dimen name="text_size_extra_large">25sp</dimen>
-
     <dimen name="text_area_height">245dp</dimen>
-
     <dimen name="empty_space_height">40dp</dimen>
-
-
-
-
-
 
 
     <!-- Personali-->
     <dimen name="splash_image_size">250dp</dimen>
+    <dimen name="splash_image_size_land">250dp</dimen>
 
     <!-- Button -->
     <dimen name="button_radius">20dp</dimen>
+
+    <!-- Margin -->
+    <dimen name="margin_bottom_logo">70dp</dimen>
+    <dimen name="margin_bottom_logo_land">70dp</dimen>
+    <dimen name="margin_top_slogan">50dp</dimen>
+    <dimen name="margin_top_slogan_land">50dp</dimen>
+
+    <!-- round logo -->
+    <dimen name="round_logo_width_external">100dp</dimen>
+    <dimen name="round_logo_width_internal">80dp</dimen>
 
 </resources>
